2006-05-22  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/status.m4: Fix typos.

2006-05-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/programs.m4 (_AC_FEATURE_CHECK_LENGTH): Remove
	only the files that this macro generates.

2006-05-21  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Limitations of Usual Tools) <sed>: For
	the HP-UX sed limitation of 99 commands, labels do not count.
	* lib/autoconf/status.m4 (_AC_SED_CMD_LIMIT): Mention that
	in the comment.
	(_AC_OUTPUT_HEADER): Revert the change from 2006-05-19.

2006-05-21  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/functions.m4 (AC_FUNC_GETMNTENT):
	Import the following fix from coreutils:

	2006-01-13  Jim Meyering  <jim@meyering.net>

	Invoke AC_CHECK_FUNCS(getmntent) unconditionally so that tests of
	$ac_cv_func_getmntent (e.g., in gl_LIST_MOUNTED_FILE_SYSTEMS) need
	not double-quote uses of that variable, to accommodate the rare
	case in which getmntent is available in none of the libraries
	checked.  This happens at least on FreeBSD 5.0.

2006-05-20  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/general.m4 (AC_CONFIG_AUX_DIRS): Bring back
	ac_config_guess, ac_config_sub, and ac_configure, since evidently
	some other programs unwisely rely on these undocumented vars.
	But put in warning comments about them.
	Problem reported by Ralf Wildenhues in
	<http://lists.gnu.org/archive/html/autoconf-patches/2006-05/msg00068.html>.
	* NEWS: Document that these variables are intended to go away.

2006-05-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/c.m4 (AC_PROG_CXX_C_O): Require AC_PROG_CXX,
	and set the language to C++ (analogous to the equivalent Fortran
	tests).

	* lib/autoconf/c.m4 (AC_PROG_CXX_C_O): New macro.
	* doc/autoconf.texi (C++ Compiler): Document it.
	* lib/autoconf/fortran.m4 (_AC_PROG_FC_C_O): Adjust comment.
	* NEWS: Update.

2006-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/status.m4 (_AC_OUTPUT_HEADER): Fix off-by-one bug